tests/good/misc/line-too-long.pas
program LineTooLong;

var
    x: Array[0..5];

begin
    ReadLn(x);
    WriteLn(x);
    ReadLn(x);
    WriteLn(x)
end.
