tests/bad/external-arity.pas
program external_arity;

procedure puti(x: integer); external;

begin
    puti
end.
